--- a/app/views/channels/admin_views/_index_member_channel_item.html.erb
+++ b/app/views/channels/admin_views/_index_member_channel_item.html.erb
@@ -1,3 +1,4 @@
 <h3 style ="padding-left: 72px; margin-top: 4px; font-size: 18px;">
-  <%= locals[:item].debug_trace %>
+  <%= locals[:item].debug_trace %><br>
+  <%= locals[:item].description %>
 </h3>
