--- a/app/views/teams/admin_views/_show_team.html.erb
+++ b/app/views/teams/admin_views/_show_team.html.erb
@@ -1,7 +1,15 @@
+<% this_page_info_page = params[locals[:this_page_info_page_param_name]] || '1'
+   ui_page_num = ((this_page_info_page.to_i - 1) * locals[:paginate_per_page].to_i) + locals[:index] + 1
+   last_activity_time = '*none*' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+   last_activity_type = '' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+   last_activity_time = locals[:last_active].last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+   last_activity_type = "#{locals[:last_active].last_activity_type}" unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+%>
+
 <div class="row text-left" style="padding: 0px; margin: 0px;">
   <div class="col-sm-12">
     <h3><u><%= link_to locals[:auth_info]['team'],
-                       team_path(locals[:team]),
+               "#{installations_path}?options=info&#{locals[:info_page_param_name]}=#{ui_page_num}&sortby=#{locals[:sort_by_param]}",
                title: "Created on #{locals[:team].created_at.strftime('%c')}" %></u>
         <%= " - #{locals[:num_team_installations]} #{locals[:num_team_installations] == 1 ? 'member has' : 'members have'} installed MiaDo." %>
     </h3>
@@ -14,7 +22,7 @@
       <h4>Added By:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
-       <h4><u><%= link_to locals[:auth_info]['user'], '' %></u></h4>
+       <h4><u><%= link_to locals[:auth_info]['user'], "#{members_path}?#{locals[:members_page_param_name]}=#{ui_page_num}" %></u></h4>
     </div>
   </div>
 </div>
@@ -30,11 +38,6 @@
   </div>
 </div>
 
-<% last_activity_time = '*none*' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
-   last_activity_type = '' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
-   last_activity_time = locals[:last_active].last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
-   last_activity_type = "last_activity_type: \"#{locals[:last_active].last_activity_type}\"" unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
-%>
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="col-sm-3">
@@ -71,7 +74,9 @@
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="col-sm-3">
-      <h4><u><%= link_to 'Members', team_members_path(locals[:team]) %></u>
+      <h4><u><%= link_to 'Members',
+                         "#{members_path}?#{locals[:members_page_param_name]}=#{ui_page_num}" %>
+         </u>
              <%= " (#{locals[:team_members].length})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
@@ -83,7 +88,9 @@
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="col-sm-3">
-      <h4><u><%= link_to 'Channels', team_channels_path(locals[:team]) %></u>
+      <h4><u><%= link_to 'Channels',
+                         "#{channels_path}?#{locals[:channels_page_param_name]}=#{ui_page_num}" %>
+         </u>
              <%= " (#{locals[:team_channels].length})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
@@ -95,7 +102,9 @@
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="col-sm-3">
-      <h4><u><%= link_to 'Tasks', team_channels_path(locals[:team]) %></u>
+      <h4><u><%= link_to 'Tasks',
+                 "#{items_path}?#{locals[:tasks_page_param_name]}=#{ui_page_num}" %>
+          </u>
              <%= " (#{locals[:num_team_items]})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
