--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -1,6 +1,9 @@
+<% this_page_team_page = params[locals[:this_page_teams_page_param_name]] || '1'
+  ui_page_num = ((this_page_team_page.to_i - 1) * locals[:paginate_per_page].to_i) + locals[:index] + 1
+%>
 <h3><%= "#{pluralize(locals[:members].length, '*Member')}* for Team" %>
     <u><%= link_to locals[:team].auth_json['info']['team'],
-                   team_path(locals[:team]),
+                   "#{teams_path}?#{locals[:teams_page_param_name]}=#{ui_page_num}",
                    title: "Team added #{locals[:team].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')}" %></u>
     <%= "(#{locals[:team].slack_team_id})" %>
 </h3>
