--- a/app/views/shared/_paginate_page_sub3.html.erb
+++ b/app/views/shared/_paginate_page_sub3.html.erb
@@ -26,7 +26,9 @@
                         :inner_window => '2',
                         :outer_window => '1',
                         :link_separator => ' ',
-                        :param_name => page_param_name %>
+                        :param_name => page_param_name,
+                        :params => { :clicked => "#{page_param_name}" }
+    %>
     </div>
   </div>
 <% end %>
