PROD.Admin-Updates: Bug fix: last active wrong for channels report. Remove db update script in installation_extentions.

--- a/app/views/channels/admin_views/_index_member.html.erb
+++ b/app/views/channels/admin_views/_index_member.html.erb
@@ -34,8 +34,7 @@
   %>
   <%= render partial: 'channels/admin_views/index_member_channel',
              locals: { locals: { channel: channel,
-                                 last_active: Channel.last_active(slack_team_id: channel.slack_team_id,
-                                                                  slack_channel_id: channel.slack_channel_id),
+                                 last_active: channel,
                                  channel_items_paginated: ListItem.items(slack_team_id: channel.slack_team_id,
                                                                          slack_channel_id: channel.slack_channel_id)
                                                                   .paginate(page: paginate_page_num, per_page: 1),
