--- a/app/views/users/admin_views/_index_user.html.erb
+++ b/app/views/users/admin_views/_index_user.html.erb
@@ -1,5 +1,3 @@
-<%
-%>
 <tr>
   <td><%= ((locals[:page].to_i - 1) * locals[:per_page].to_i) + locals[:index] + 1 %>
   <td><u><%= link_to locals[:user].name,
@@ -8,14 +6,37 @@
   </td>
   <td><%= locals[:user].email %></td>
   <td><%= locals[:user].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
-  <td>Team:&nbsp;&nbsp;
-        <%= locals[:last_activity_info][:last_active_team] %><br>
-      Model:&nbsp;
-        <%= locals[:last_activity_info][:last_active_model] %><br>
-      Date:&nbsp;&nbsp;&nbsp;
-        <%= locals[:last_activity_info][:last_activity_date].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %><br>
-      Type:&nbsp;&nbsp;&nbsp;
-        <%= locals[:last_activity_info][:last_activity_type] %>
+  <% unless locals[:last_activity_info].empty? %>
+    <td><b>Team:</b>&nbsp;&nbsp;
+          <%= locals[:last_activity_info][:last_active_team] %><br>
+        <b>Model:</b>&nbsp;
+          <%= "#{locals[:last_activity_info][:last_active_model]}" %>
+          <% unless locals[:last_activity_info][:last_active_rec_name].empty? %>
+            <%= " (#{locals[:last_activity_info][:last_active_rec_name]})" %>
+          <% end %><br>
+        <b>Date:</b>&nbsp;&nbsp;&nbsp;
+          <%= locals[:last_activity_info][:last_activity_date].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %><br>
+        <b>Type:</b>&nbsp;&nbsp;&nbsp;
+          <%= locals[:last_activity_info][:last_activity_type] %><br>
+        <% unless (last_channel_activity = Channel.last_activity(info: locals[:last_activity_info])).nil? %>
+        <b>Last channel activity:</b><br>&nbsp;&nbsp;
+          Date:&nbsp;
+            <%= last_channel_activity[:date].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %><br>&nbsp;&nbsp;
+          Type:&nbsp;
+            <%= last_channel_activity[:type] %><br>&nbsp;&nbsp;
+          About:&nbsp;
+            <%= last_channel_activity[:about] %><br>
+        <% end %>
+        <% unless (last_taskbot_activity = Channel.last_taskbot_activity(info: locals[:last_activity_info])).nil? %>
+        <b>Last taskbot channel activity:</b><br>&nbsp;&nbsp;
+          Date:&nbsp;
+            <%= last_taskbot_activity[:date].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %><br>&nbsp;&nbsp;
+          Type:&nbsp;
+            <%= last_taskbot_activity[:type] %><br>&nbsp;&nbsp;
+          About:&nbsp;
+            <%= last_taskbot_activity[:about] %><br>
+        <% end %>
+      <% end %>
   </td>
   <td><u><%= link_to locals[:num_installations], installations_path %></u></td>
   <td><u><%= link_to locals[:num_teams], teams_path %></u></td>
