Update add to slack copyright to 2017. Dockerize app. Add Rubymine as IDE.

--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -166,7 +166,7 @@
   <div class="row text-center">
     <div class="col-sm-12" style="padding-top:60px;" >
       <p style="color: #7F7F7F;">
-        Copyright 2016 Ray Novarina. All Rights Reserved
+        Copyright 2016-17 Ray Novarina. All Rights Reserved
       <p>
     </div>
   </div>
